--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Agustin Sampayo">
     <meta name="description" content="Practica de DOM y Js">
     <meta name="Keyworks" content="Practica de DOM y Js">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -16,9 +17,28 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <h1 class="display-3 text-center">CRONOMETRO</h1>
+        <hr>
+    </header>
+    <main>
+        <section class="bg-success container d-flex flex-column align-items-center my-3">
+            <aside class="bg-black text-white display-1 lead border border-2 p-3 w-75 text-center">
+                <span class="horas"></span>:
+                <span class="minutos"></span>:
+                <span class="segundos"></span>.
+                <span class="centesimas"></span>
+            </aside>
+            <aside class="display-3 my-3">
+                <button type="button" id="iniciar"><i class="bi bi-play"></i></button>
+                <button type="button" id="reset"><i class="bi bi-arrow-clockwise"></i></button>
+            </aside>
+
+        </section>
+    </main>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy;Todos los derechos reservados</p>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
